# obird

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEX_CEX_MM.md  POLY_HEDGING_ARCHITECTURE.md  PRD_FARMING_PLATFORM.md  PREDICTION_MARKETS.md  PREDICT_FARMING_NOTES.md  PREDICT_QUOTING_DESIGN.md  PREDICT_RUNBOOK.md  PROJECT_PLAN.md  QUICK_START.md  README.md  RUNBOOK.md
.claude/: CLAUDE.md  LLM_GUIDE.md
.github/ISSUE_TEMPLATE/: phase1_task.md  phase2_task.md  phase3_task.md  subagent_task.md
.github/workflows/: ci.yml
configs/: example.toml  predict_quoter.toml  quoter.toml
configs/markets/: 143028.toml  TEMPLATE.toml
configs/markets_poly/: 142932.toml  143028.toml  143029.toml  143030.toml  174032.toml  189655.toml  189656.toml  189657.toml  189658.toml  189659.toml  189660.toml  189661.toml  198731.toml  198755.toml  198756.toml  21177.toml  28211.toml  28212.toml  28213.toml  28214.toml  28215.toml  28216.toml  52261.toml  TEMPLATE.toml
crates/backtest/: CONTEXT.md  Cargo.toml
crates/backtest/src/: harness.rs  lib.rs  matching_engine.rs  recorder.rs  report.rs  sim_connector.rs  sim_market_data.rs
crates/cli/: Cargo.toml
crates/cli/src/: backtest.rs  live.rs  main.rs  poly_check.rs  predict_approve.rs  predict_check.rs  predict_liquidate.rs  predict_markets.rs  record.rs
crates/connectors/binance/: CONTEXT.md  Cargo.toml
crates/connectors/binance/src/: client.rs  lib.rs  market_data.rs  normalize.rs
crates/connectors/hyperliquid/: CONTEXT.md  Cargo.toml
crates/connectors/hyperliquid/src/: client.rs  lib.rs  market_data.rs  normalize.rs
crates/connectors/lighter/: CONTEXT.md  Cargo.toml
crates/connectors/lighter/src/: client.rs  lib.rs  market_data.rs  normalize.rs
crates/connectors/polymarket/: CONTEXT.md  Cargo.toml
crates/connectors/polymarket/src/: client.rs  execution.rs  lib.rs  market_data.rs  normalize.rs
crates/connectors/predict_fun/: CONTEXT.md  Cargo.toml
crates/connectors/predict_fun/src/: client.rs  lib.rs  market_data.rs  normalize.rs
crates/core/: CONTEXT.md  Cargo.toml
crates/core/src/: action.rs  config.rs  error.rs  event.rs  lib.rs
crates/core/src/traits/: connector.rs  market_data.rs  mod.rs  risk.rs  strategy.rs
crates/core/src/types/: decimal.rs  instrument.rs  market_data.rs  mod.rs  order.rs  position.rs
crates/engine/: CONTEXT.md  Cargo.toml
crates/engine/src/: lib.rs  market_data_bus.rs  order_manager.rs  order_router.rs  position_tracker.rs  risk.rs  runner.rs
crates/fair_value_service/: CONTEXT.md  Cargo.toml
crates/fair_value_service/src/: data_source.rs  main.rs  model.rs  publisher.rs
crates/strategies/hl_spread_quoter/: Cargo.toml
crates/strategies/hl_spread_quoter/src/: lib.rs  params.rs  quoter.rs
crates/strategies/pair_trader/: CONTEXT.md  Cargo.toml
crates/strategies/pair_trader/src/: lib.rs  params.rs  spread_model.rs  trader.rs
crates/strategies/predict_hedger/: Cargo.toml
crates/strategies/predict_hedger/src/: lib.rs  params.rs  strategy.rs
crates/strategies/prediction_quoter/: CONTEXT.md  Cargo.toml
crates/strategies/prediction_quoter/src/: lib.rs  params.rs  pricing.rs  quoter.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: audit.rs  lib.rs  metrics.rs  recorder.rs  tracing_setup.rs  trade_log.rs
decisions/: 001-single-binary-multi-exchange.md  002-broadcast-channels-not-nats.md  003-trait-based-strategy.md  004-fair-value-separate-service.md  005-unified-risk.md  006-otel-telemetry.md  template.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_semantic.json  GRAPH_REPORT.md  graph.html  graph.json
infra/docker/: Dockerfile.engine  docker-compose.yml
logs/: obird.jsonl.2026-04-12  obird.jsonl.2026-04-17  obird.jsonl.2026-04-21
logs/data/: bbo-2026-04-14.jsonl  fills-2026-04-13.jsonl
scripts/: create_github_issues.py  farm.py  project_status.sh  run_backtest.sh
tickets/: README.md  publish.sh
tickets/phase_1a/: T1-trait-method.md  T2-connector-impls.md  T3-engine-keying.md  T4-live-wiring.md  T5-multi-market.md  T6-backtest-wiring.md  T7-validation.md
tickets/phase_1b/: T1-wire-format.md  T2-fair-value-bus.md  T3-cross-venue-model.md  T4-fv-service-task.md  T5-live-wiring.md  T6-prediction-quoter-refactor.md  T7-validation.md
tickets/phase_1c/: T1-uds-transport.md  T2-ingest-binaries.md  T3-tier0-ndjson.md  T4-engine-uds-client.md  T5-validation.md
tickets/phase_1d/: T1-nats-local.md  T2-wire-schemas.md  T3-action-transport.md  T4-idempotency.md  T5-fv-nats-swap.md  T6-md-nats-swap.md  T7-validation.md
