[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/connectors/hyperliquid",
    "crates/connectors/lighter",
    "crates/connectors/binance",
    "crates/connectors/polymarket",
    "crates/connectors/predict_fun",
    "crates/strategies/prediction_quoter",
    "crates/strategies/pair_trader",
    "crates/strategies/hl_spread_quoter",
    "crates/engine",
    "crates/fair_value_service",
    "crates/backtest",
    "crates/telemetry",
    "crates/cli",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
