[package]
name = "trading-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
trading-core = { path = "../core" }
trading-engine = { path = "../engine" }
trading-backtest = { path = "../backtest" }
trading-telemetry = { path = "../telemetry" }
connector-hyperliquid = { path = "../connectors/hyperliquid" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal = { workspace = true }
