[package]
name = "trading-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
trading-core    = { path = "../core" }
trading-engine  = { path = "../engine" }
trading-backtest = { path = "../backtest" }
trading-telemetry = { path = "../telemetry" }
connector-hyperliquid = { path = "../connectors/hyperliquid" }
strategy-hl-spread-quoter = { path = "../strategies/hl_spread_quoter" }

tokio       = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
rust_decimal = { workspace = true }
toml        = { workspace = true }
serde       = { workspace = true }
dotenvy     = "0.15"
