[package]
name = "trading-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
trading-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
