[package]
name = "connector-binance"
version = "0.1.0"
edition = "2021"

[dependencies]
trading-core = { path = "../../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
