[package]
name = "connector-hyperliquid"
version = "0.1.0"
edition = "2021"

[dependencies]
trading-core = { path = "../../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["std"] }

# infinitefield/hypersdk — alloy signing, auto-reconnecting WS, PriceTick rounding built-in
hypersdk = "0.2.8"
