[package]
name = "connector-predict_fun"
version = "0.1.0"
edition = "2021"

[dependencies]
trading-core  = { path = "../../core" }
predict-sdk   = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
async-trait   = { workspace = true }
tracing       = { workspace = true }
rust_decimal       = { workspace = true }
rust_decimal_macros = { workspace = true }
