[package]
name = "strategy-predict-hedger"
version = "0.1.0"
edition = "2021"

[dependencies]
trading-core = { path = "../../core" }
tokio        = { workspace = true }
serde        = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
async-trait  = { workspace = true }
